# opcua

./: .gitignore  Cargo.toml
.github/workflows/: ci_code_coverage.yml  main.yml
docs/: async_client.md  design.md
dotnet-tests/Common/: Comms.cs  In.cs  Out.cs  TaggedUnionConverter.cs
dotnet-tests/TestServer/: Program.cs  Server.cs  TestNodeManager.cs
dotnet-tests/external-tests/: Cargo.toml
integration/src/: harness.rs  tests.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/tests/: browse.rs  core_tests.rs  node_management.rs
opcua-client/: Cargo.toml
opcua-client/src/: lib.rs
opcua-codegen/: Cargo.toml
opcua-codegen/src/: error.rs  lib.rs  main.rs  utils.rs
opcua-core-namespace/src/: lib.rs
opcua-crypto/: Cargo.toml
opcua-crypto/src/: certificate_store.rs  hash.rs  pkey.rs  security_policy.rs  x509.rs
opcua-crypto/src/tests/: crypto.rs  mod.rs
opcua-macros/: Cargo.toml
opcua-macros/src/: lib.rs  utils.rs
opcua-nodes/: Cargo.toml
opcua-nodes/src/: base.rs  data_type.rs  generic.rs  import.rs  lib.rs  method.rs  object.rs  object_type.rs  reference_type.rs  type_tree.rs  variable.rs  variable_type.rs  view.rs  xml.rs
opcua-server/src/: authenticator.rs  builder.rs  info.rs  lib.rs  server.rs  server_handle.rs
opcua-types/: Cargo.toml
opcua-types/src/: add_node_attributes.rs  argument.rs  array.rs  basic_types.rs  byte_string.rs  data_type_definition.rs  data_value.rs  date_time.rs  diagnostic_info.rs  encoding.rs  (+23 more)
opcua-xml/: Cargo.toml
samples/: client.conf
samples/async-client/: Cargo.toml
samples/async-client/src/: main.rs
(+754 files in other folders)
