[package]
name = "opcua-async-client"
version = "0.13.0" # OPCUARustVersion
edition = "2021"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
pico-args = "0.5"
tokio = { version = "1.36.0", features = ["full"] }

[dependencies.opcua]
path = "../../lib"
version = "0.13.0" # OPCUARustVersion
features = ["client", "console-logging"]
